# hseml-group-project-aleksandra-ts-3

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: streamlit_app.py  theme.py
feedback/: feedback.md
models/: final_model.json
notebooks/: 01_eda.ipynb  02_baseline.ipynb  03_experiments.ipynb
report/: report.md
src/: attrition_parser.py  config.py  deploy_preprocessing.py  hypothesis_tests.py  inference.py  modeling.py  preprocessing.py
src/api/: app.py  deps.py  schemas.py
src/scripts/: download_data.py  export_deploy.py  make_synthetic_train.py  plot_feature_importance.py  register_kernel.py
tests/: test.py  test_api.py  test_attrition_parser.py  test_inference.py
